--- a/media.html
+++ b/media.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html" target="_self">Home</a></li>
+                <li><a href="contact.html" target="_self">Contact</a></li>
+                <li><a href="forms.html" target="_self">Forms</a></li>
+                <li><a href="media.html" target="_self">Media</a></li>
+                <li><a href="images.html" target="_self">Images</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <footer>
+        <p>© Copyright 2024 Jean Bryant Figueroa | <a href="https://github.com/Hasturious">Github</a></p>
+    </footer>
 </body>
 </html>
