--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             </ul>
         </nav>
     </header>
-
+    <main>
+        <h1>Hello. Welcome to the website</h1>
+        
+    </main>
     <footer>
         <p>© Copyright 2024 Jean Bryant Figueroa | <a href="https://github.com/Hasturious">Github</a></p>
     </footer>
