--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,37 @@
             <ul>
                 <li><a href="index.html" target="_self">Home</a></li>
                 <li><a href="contact.html" target="_self">Contact</a></li>
-                <li><a href="forms.html" target="_self">Forms</a></li>
+                <li><a href="aboutme.html" target="_self">About Me</a></li>
                 <li><a href="media.html" target="_self">Media</a></li>
                 <li><a href="images.html" target="_self">Images</a></li>
             </ul>
         </nav>
     </header>
+
+    <main>
+        <form action="/submit" method="post">
+
+            <label for="name">Username:</label>
+            <input type="text" id="name" name="name" placeholder="Enter your name">
+
+            <br>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="example@example.com">
+            
+            <br>
+
+            <label for="subject">Subject:</label>
+            <input type="subject" id="subject" name="email" placeholder="subject">
+
+            <br>
+
+            <label for="message">Message:</label>
+            <input type="message" id="message" name="message" placeholder="message">
+            
+        </form>
+    </main>
+
 
     <footer>
         <p>© Copyright 2024 Jean Bryant Figueroa | <a href="https://github.com/Hasturious">Github</a></p>
