Finished Images and Index pages

--- a/images.html
+++ b/images.html
@@ -18,6 +18,41 @@
         </nav>
     </header>
 
+    <main>
+        <h2>A brief collection of Denny's with strange signs.</h2>
+        <ul>
+            <li>
+                <a href="#dennys1">First Denny's</a>
+            </li>
+            <li>
+                <a href="#dennys2">Second Denny's</a>
+            </li>
+            <li>
+                <a href="#dennys3">Third Denny's</a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <section id="dennys1">
+                <h2>A local Denny's</h2>
+                <img src="images/Dennys1.jpg" alt="Local Denny's with off center sign" height="300px" width="500px">
+                </section>
+            </li>
+
+            <li>
+                <section id="dennys2"></section>
+                <h2>Bear Valley Road California Denny's</h2>
+                <img src="images/Dennys2.jpg" alt="Bear Valley Road Denny's with off center sign" height="300px" width="500px">
+            </li>
+
+            <li>
+                <section id="dennys3"></section>
+                <h2>Some Other Denny's</h2>
+                <img src="images/Dennys3.jpg" alt="Random Denny's with off center sign" height="300px" width="500px">
+            </li>
+        </ul>
+    </main>
+
     <footer>
         <p>© Copyright 2024 Jean Bryant Figueroa | <a href="https://github.com/Hasturious">Github</a></p>
     </footer>
