--- a/index.html
+++ b/index.html
@@ -18,8 +18,25 @@
         </nav>
     </header>
     <main>
-        <h1>Hello. Welcome to the website</h1>
         
+        <article>
+            <h1>Hello. Welcome to the website where I talk about Denny's</h1>
+            
+            <section>
+                <h3>Denny's Sign</h3>
+                <img src="images/dennys2.jpg" alt="Denny's sign thats off center from the building" height="300px" width="300px">
+                <p>why is it off center?</p>
+
+                <p>This has been bothering me for years</p>
+
+            </section>
+
+            <section>
+                Also the food isn't really that good just go to I-hop
+            </section>
+
+        </article>
+
     </main>
     <footer>
         <p>© Copyright 2024 Jean Bryant Figueroa | <a href="https://github.com/Hasturious">Github</a></p>
