--- a/images.html
+++ b/images.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="index.html" target="_self">Home</a></li>
                 <li><a href="contact.html" target="_self">Contact</a></li>
-                <li><a href="aboutme.html" target="_self">About Me</a></li>
+                <li><a href="meals.html" target="_self">Meals</a></li>
                 <li><a href="media.html" target="_self">Media</a></li>
                 <li><a href="images.html" target="_self">Images</a></li>
             </ul>
@@ -33,22 +33,21 @@
         </ul>
         <ul>
             <li>
-                <section id="dennys1">
+                <div id="dennys1"></div>
                 <h2>A local Denny's</h2>
-                <img src="images/Dennys1.jpg" alt="Local Denny's with off center sign" height="300px" width="500px">
-                </section>
+                <img src="images/Dennys1.jpg" alt="Local Denny's with off center sign" height="300" width="500">
             </li>
 
             <li>
-                <section id="dennys2"></section>
+                <div id="dennys2"></div>
                 <h2>Bear Valley Road California Denny's</h2>
-                <img src="images/Dennys2.jpg" alt="Bear Valley Road Denny's with off center sign" height="300px" width="500px">
+                <img src="images/Dennys2.jpg" alt="Bear Valley Road Denny's with off center sign" height="300" width="500">
             </li>
 
             <li>
-                <section id="dennys3"></section>
+                <div id="dennys3"></div>
                 <h2>Some Other Denny's</h2>
-                <img src="images/Dennys3.jpg" alt="Random Denny's with off center sign" height="300px" width="500px">
+                <img src="images/Dennys3.jpg" alt="Random Denny's with off center sign" height="300" width="500">
             </li>
         </ul>
     </main>
