--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="index.html" target="_self">Home</a></li>
                 <li><a href="contact.html" target="_self">Contact</a></li>
-                <li><a href="aboutme.html" target="_self">About Me</a></li>
+                <li><a href="meals.html" target="_self">Meals</a></li>
                 <li><a href="media.html" target="_self">Media</a></li>
                 <li><a href="images.html" target="_self">Images</a></li>
             </ul>
@@ -24,6 +24,7 @@
             <label for="name">Username:</label>
             <input type="text" id="name" name="name" placeholder="Enter your name">
 
+
             <br>
 
             <label for="email">Email:</label>
@@ -32,12 +33,12 @@
             <br>
 
             <label for="subject">Subject:</label>
-            <input type="subject" id="subject" name="email" placeholder="subject">
+            <input type="text" id="subject" name="subject" placeholder="subject goes here">
 
             <br>
 
             <label for="message">Message:</label>
-            <input type="message" id="message" name="message" placeholder="message">
+            <input type="text" id="message" name="message" placeholder="message goes here">
             
         </form>
     </main>
