--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
             <ul>
                 <li><a href="index.html" target="_self">Home</a></li>
                 <li><a href="contact.html" target="_self">Contact</a></li>
-                <li><a href="aboutme.html" target="_self">About Me</a></li>
+                <li><a href="meals.html" target="_self">Meals</a></li>
                 <li><a href="media.html" target="_self">Media</a></li>
                 <li><a href="images.html" target="_self">Images</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        
+
         <article>
             <h1>Hello. Welcome to the website where I talk about Denny's</h1>
             
