--- a/media.html
+++ b/media.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="index.html" target="_self">Home</a></li>
                 <li><a href="contact.html" target="_self">Contact</a></li>
-                <li><a href="aboutme.html" target="_self">About Me</a></li>
+                <li><a href="meals.html" target="_self">Meals</a></li>
                 <li><a href="media.html" target="_self">Media</a></li>
                 <li><a href="images.html" target="_self">Images</a></li>
             </ul>
@@ -19,7 +19,9 @@
     </header>
     <main>
         
-
+        <video width="320" height="240" controls>
+            <source src="media/waveywaves.mp4" type="video/mp4">
+          </video> 
 
     </main>
     <footer>
