added submit button to form

--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,9 @@
             <label for="message">Message:</label>
             <input type="text" id="message" name="message" placeholder="message goes here">
             
+            <br>
+
+            <input type="submit" id="submit" value="submit">
         </form>
     </main>
 
