--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </section>
 
             <section>
-                Also the food isn't really that good just go to I-hop
+                Also the food isn't really that good just go to Ihop
             </section>
 
         </article>
