--- a/meals.html
+++ b/meals.html
@@ -18,6 +18,30 @@
         </nav>
     </header>
 
+    <main>
+
+        <div id="table1">
+            <table style="width: 300px;">
+            <caption>Food Edibility</caption>
+                <thead>
+                    <tr>
+                        <th class="left"></th>
+                        <th>Denny's food</th>
+                        <th>Ihop food</th>
+                    </tr>
+                </thead>
+                <tbody>    
+                    <tr>
+                        <td class="left">Edible</td>
+                        <td>NO</td>
+                        <td>YES</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+    </main>
+
     <footer>
         <p>© Copyright 2024 Jean Bryant Figueroa | <a href="https://github.com/Hasturious">Github</a></p>
     </footer>
